--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@
 }
 
 .section__place{
-    width: 100vw;
+    margin-block-end: 0%;
     display: flex;
     background-color: #353A40;
     color: white;
